src/test/deca/context/invalid/declClass-wrongMethodReturnTypeIntBoolean.context
declClass-wrongMethodReturnTypeIntBoolean.deca:7: